<resources>
    <string name="app_name">SoundMemo</string>
    <string name="Account_Enter">Account:</string>
    <string name="Password_Enter">Password:</string>
    <string name="Account_hint">Enter your account here</string>
    <string name="Password_hint">Enter your password here</string>
    <string name="Patient_btn">Patient</string>
    <string name="CareGiver_btn">CareGiver</string>
    <string name="LogIn_btn">Log In</string>
    <string name="SignUp_btn">Sign Up</string>
    <string name="Add_btn">add</string>
    <string name="Set_time">8:00</string>
    <string name="Set_activity">Activity:</string>
    <string name="Set_tips">Tips:</string>
    <string name="Set_done">Done</string>
    <string name="Enter_act">Click to enter the activity</string>
    <string name="Enter_tips">Click to enter Tips</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_role_selection">RoleSelection</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>

    <!--to toggle the open close button
        of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="time_for_task">Time for Task!</string>
    <string name="activity">Activity</string>
    <string name="tips">Tips:</string>
    <string name="time">Time</string>
    <string name="add_task">Add task</string>
    <string name="view_tasks">View tasks</string>
    <string name="no_activity">No Activity</string>
    <string name="task">Task</string>
    <string name="completion_status">Completion Status</string>
    <string name="submit">submit</string>
</resources>