<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bb123456"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"

        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="160dp"
        android:text="Sign in"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/User_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Account_Enter"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"

        android:layout_marginStart="36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="250dp"
        tools:ignore="MissingConstraints,missing constrain"
        tools:layout_editor_absoluteY="336dp" />

    <TextView
        android:id="@+id/user_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password_Enter"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="300dp"
        tools:ignore="MissingConstraints,missing constrain"
        />

    <EditText
        android:id="@+id/text_userid"
        android:layout_width="199dp"
        android:layout_height="34dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/Account_hint"
        android:paddingTop="0dp"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/User_id"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/User_id"
        app:layout_constraintTop_toTopOf="@id/User_id"
        />

    <EditText
        android:id="@+id/text_userPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/Password_hint"
        android:paddingTop="0dp"
        android:password="true"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/user_pwd"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_pwd"
        app:layout_constraintTop_toTopOf="@id/user_pwd" />

    <RadioGroup
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_pwd">

        <RadioButton
            android:id="@+id/Patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Patient_btn"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/Caretaker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/CareGiver_btn"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RadioGroup>
    <Button
        android:id="@+id/Login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_btn"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:backgroundTint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioButton"

        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/Signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignIn_btn"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Login_button"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
