<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#CAE1FF"
    tools:context=".IndividualTaskPage">
    <!--Action Bar-->
<!--    <RelativeLayout-->
<!--        android:id="@+id/actionbar2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="#FFCCCC">-->

<!--        <ImageView-->
<!--            android:id="@+id/back_to_eventList"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerVertical="true"-->
<!--            android:clickable="true"-->
<!--            android:focusable="true"-->
<!--            android:src="@drawable/ic_baseline_art_track_24">-->

<!--        </ImageView>-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerVertical="true"-->
<!--            android:layout_marginStart="8dp"-->
<!--            android:layout_toEndOf="@id/back_to_eventList"-->
<!--            android:text="Back to EventList"-->
<!--            android:textSize="20sp" />-->
<!--    </RelativeLayout>-->
    <!--Tool Bar on Top-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:backgroundTint="#2894ff"
        android:elevation="4dp" />
    <!--Task Image-->
    <ImageView
        android:id="@+id/task_image2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/toolbar"
        android:src="@drawable/drug" />

    <!--Show Activity -->
    <RelativeLayout
        android:id="@+id/show_activity2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:layout_below="@id/task_image2"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="70dp">
            <!--        Text: Activity-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity"
                android:textSize="18sp"/>
            <!--            Activity detail-->
            <TextView
                android:id="@+id/activity_detail2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_activity"
                android:textSize="26sp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </RelativeLayout>

    <!--Show Tips-->
    <RelativeLayout
        android:id="@+id/show_tips2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_activity2"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="70dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tips"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tips_detail2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textColor="@color/black"/>

        </LinearLayout>

    </RelativeLayout>

    <!--Show Time-->
    <RelativeLayout
        android:id="@+id/show_time2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:layout_below="@id/show_tips2"
        android:paddingVertical="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="70dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/time_detail2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/Show_status"
        android:layout_below="@+id/show_time2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="Complete"
        android:textSize="30sp"
        >
    </TextView>

</RelativeLayout>